crates/cli/tests/snapshots/snapshot_tests__json_unused_class_members_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: redact_version(&json_str)
---
{
  "schema_version": 3,
  "version": "[VERSION]",
  "elapsed_ms": 0,
  "total_issues": 1,
  "unused_files": [],
  "unused_exports": [],
  "unused_types": [],
  "unused_dependencies": [],
  "unused_dev_dependencies": [],
  "unused_optional_dependencies": [],
  "unused_enum_members": [],
  "unused_class_members": [
    {
      "path": "src/service.ts",
      "parent_name": "UserService",
      "member_name": "legacyMethod",
      "kind": "class_method",
      "line": 42,
      "col": 4
    }
  ],
  "unresolved_imports": [],
  "unlisted_dependencies": [],
  "duplicate_exports": [],
  "type_only_dependencies": [],
  "test_only_dependencies": [],
  "circular_dependencies": []
}
