crates/cli/tests/snapshots/snapshot_tests__json_unused_enum_members_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: redact_version(&json_str)
---
{
  "schema_version": 3,
  "version": "[VERSION]",
  "elapsed_ms": 0,
  "total_issues": 1,
  "unused_files": [],
  "unused_exports": [],
  "unused_types": [],
  "unused_dependencies": [],
  "unused_dev_dependencies": [],
  "unused_optional_dependencies": [],
  "unused_enum_members": [
    {
      "path": "src/enums.ts",
      "parent_name": "Status",
      "member_name": "Deprecated",
      "kind": "enum_member",
      "line": 8,
      "col": 2
    }
  ],
  "unused_class_members": [],
  "unresolved_imports": [],
  "unlisted_dependencies": [],
  "duplicate_exports": [],
  "type_only_dependencies": [],
  "test_only_dependencies": [],
  "circular_dependencies": []
}
